--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "joi": "^17.13.3",
+    "mongoose": "^8.6.3"
   }
 }
