--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^4.21.0",
+    "joi": "^17.13.3",
+    "mongoose": "^8.6.3"
+  },
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
-  },
-  "dependencies": {
-    "express": "^4.21.0",
-    "joi": "^17.13.3",
-    "mongoose": "^8.6.3"
   }
 }
