--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "joi": "^17.13.3",
-    "mongoose": "^8.6.3"
+    "mongoose": "^8.6.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.12",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
