--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.21.0",
     "joi": "^17.13.3",
     "mongoose": "^8.6.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pino": "^9.4.0"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
