--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.12",
     "nodemon": "^3.1.7",
+    "pino-pretty": "^11.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
