--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "esModuleInterop": true,
+    "types": ["./types.d.ts"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["./node_modules"],
