--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dotenv-safe": "^9.1.0",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "joi": "^17.13.3",
@@ -18,14 +19,17 @@
     "mongoose": "^8.6.3",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
+    "nodemailer": "^6.9.15",
     "pino": "^9.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/dotenv-safe": "^8.1.6",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
+    "@types/nodemailer": "^6.4.16",
     "nodemon": "^3.1.7",
     "pino-pretty": "^11.2.2",
     "ts-node": "^10.9.2",
