--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv-safe": "^9.1.0",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/dotenv-safe": "^8.1.6",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
